--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
     <title>Top Live Dota 2 Games</title>
   </head>
   <body>
-  
+    <table id="gamesTable"></table>
   </body>
   <script src="livegames.js"></script>
 </html>
